Fixed Play button visible on Touch Screens Fixed Georgie Storie image

--- a/Shink/Components/Pages/Luister.razor.css
+++ b/Shink/Components/Pages/Luister.razor.css
@@ -408,7 +408,7 @@ h1 {
     }
 
     .story-cover-play {
-        opacity: 1;
+        /*opacity: 1;*/
         background: linear-gradient(to top, rgba(0, 0, 0, 0.33), rgba(0, 0, 0, 0.03));
     }
 }
